--- a/src/main/resources/templates/book-borrow-template.html
+++ b/src/main/resources/templates/book-borrow-template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html dir="ltr" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">>
+<html dir="ltr" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -171,7 +171,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td align="center" class="esd-block-text es-infoblock es-m-txt-c es-p20t es-p20b">
-                                                                <p>From the EduHub team</p>
+                                                                <h3 style="color: #ffffff;">From the EduHub team</h3>
                                                             </td>
                                                         </tr>
                                                         </tbody>
@@ -233,7 +233,7 @@
                                                         <tbody>
                                                         <tr>
                                                             <td align="left" class="esd-block-text es-m-txt-c es-p20t es-p20b">
-                                                                <p>Contact us via ou Social Networks</p>
+                                                                <p style="color: white;">Contact us via our Social Networks</p>
                                                             </td>
                                                         </tr>
                                                         </tbody>
@@ -257,5 +257,4 @@
     </table>
 </div>
 </body>
-
 </html>
